--- a/CS365-1-Skiing.html
+++ b/CS365-1-Skiing.html
@@ -1,12 +1,50 @@
 <!DOCTYPE html>
 <html>
+	<style>
+         header {
+             position: fixed;
+             background-color: white;
+             right: 5px;
+             top: 0px;
+             width: 80%;
+             float: right;
+             height: 70px;
+         }
+         section {
+             float: left;
+             top: 70px;
+             width: 20%;
+             height: 600px;
+         }
+         aside {
+        	 top: 70px;
+             float: right;
+             margin-top: 60px ;
+             width: 80%;
+             height: 600px;
+             background-color: LightSteelBlue;
+             align = center;
+         }
+         footer {
+         	 clear: both;
+             width: 100%;
+             margin-left: auto;
+             background-color: LightSteelBlue;
+         }
+	</style>
 <body>
-	<h1> Skiing </h1>
-	<img src = "http://cdn.bozemannet.com/images/content/2338_3492_Bozeman_Backcountry_Skiing_md.jpg"/>
-		<p> Skiing has been almost second nature to me as, because for one I am of Nordic descent, and also due to the fact
+	<header><h1 align = "center"> Skiing </h1> </header>
+	<aside><div style="text-align: center"><img src = "http://cdn.bozemannet.com/images/content/2338_3492_Bozeman_Backcountry_Skiing_md.jpg"/></div>
+		<p align = "center"> Skiing has been almost second nature to me as, because for one I am of Nordic descent, and also due to the fact
 		I was born and raised in the Midwest. My parents, realizing this, began to teach me how to ski at the ripe age of 5
 		years old. It is something that has stayed fairly consistent in my life as nearly everyone in my family skis, and is 
 		used as a family reunion of sorts.</p>
-	<a href = "CS365-1-Bjorn'sHomepage.html"> Bjorn's Homepage </a>
+	</aside>
+	<section>	
+	<a href = "CS365-1-WritingCode.html" > <p style="text-align:center"> Writing Code </p> </a>
+	<a href = "CS365-1-Tennis.html" > <p style="text-align:center"> Tennis </p> </a>
+	<a href = "CS365-1-Bjorn'sHomepage.html" > <p style="text-align:center"> Bjorn's Homepage </p> </a>
+	</section>
+	<footer> Property of Bjorn Norderhaug </footer>
 </body>
 </html>
