--- a/CS365-1-WritingCode.html
+++ b/CS365-1-WritingCode.html
@@ -1,16 +1,54 @@
 <!DOCTYPE html>
 <html>
+	<style>
+         header {
+             position: fixed;
+             background-color: white;
+             right: 5px;
+             top: 0px;
+             width: 80%;
+             float: right;
+             height: 70px;
+         }
+         section {
+             float: left;
+             top: 70px;
+             width: 20%;
+             height: 600px;
+         }
+         aside {
+        	 top: 70px;
+             float: right;
+             margin-top: 60px ;
+             width: 80%;
+             height: 600px;
+             background-color: LightSteelBlue;
+             align = center;
+         }
+         footer {
+         	 clear: both;
+             width: 100%;
+             margin-left: auto;
+             background-color: LightSteelBlue;
+         }
+	</style>
 <body>
-	<h1> Writing Code </h1>
-	<img src="https://0.s3.envato.com/files/6125677/female%20typing%20on%20keyboard%202%20590.jpg"/>
-		<p> Being that I am a Computer Science major, I have spent a considerable amount of time programming
+	<header><h1 align = "center"> Writing Code </h1></header>
+	<aside><div style="text-align: center"><img src="https://0.s3.envato.com/files/6125677/female%20typing%20on%20keyboard%202%20590.jpg" width = 400 height = 250/></div>
+		<p align = "center"> Being that I am a Computer Science major, I have spent a considerable amount of time programming
 		in many different languages. </p>
 		<p> Some of these languages include: </p>
 		<ul>
 			<li> Python </li>
 			<li> HTML </li>
 			<li> Java </li>
-		</ul> 
-		<a href = "CS365-1-Bjorn'sHomepage.html"> Bjorn's Homepage </a>
+		</ul> </p>
+	</aside>
+	<section>	
+	<a href = "CS365-1-Tennis.html" > <p style="text-align:center"> Tennis </p> </a>
+	<a href = "CS365-1-Skiing.html" > <p style="text-align:center"> Skiing </p> </a>
+	<a href = "CS365-1-Bjorn'sHomepage.html" > <p style="text-align:center"> Bjorn's Homepage </p> </a>
+	</section>
+	<footer> Property of Bjorn Norderhaug </footer>
 </body>
 </html>
